# apy-ops

./: CLAUDE.md  README.md  apim_client.py  applier.py  artifact_reader.py  deploy.py  differ.py  extractor.py  planner.py  pyproject.toml  requirements.txt  state.py
.github/workflows/: tests.yml
artifacts/: __init__.py  api_diagnostics.py  api_operation_policies.py  api_policies.py  api_tags.py  apis.py  backends.py  diagnostics.py  gateway_apis.py  gateways.py  groups.py  loggers.py  named_values.py  policy_fragments.py  product_apis.py  product_groups.py  product_policies.py  product_tags.py  products.py  service_policy.py  subscriptions.py  tags.py  version_sets.py
src/apy_ops/: __init__.py  apim_client.py  applier.py  artifact_reader.py  cli.py  differ.py  exceptions.py  extractor.py  planner.py  state.py
src/apy_ops/artifacts/: __init__.py  api_diagnostics.py  api_operation_policies.py  api_policies.py  api_revisions.py  api_tags.py  apis.py  backends.py  diagnostics.py  gateway_apis.py  gateways.py  groups.py  loggers.py  named_values.py  policy_fragments.py  product_apis.py  product_groups.py  product_policies.py  product_tags.py  products.py  service_policy.py  subscriptions.py  tags.py  version_sets.py
tests/: test_apim_client.py  test_applier.py  test_artifact_reader.py  test_artifacts.py  test_cli_errors.py  test_deploy_cli.py  test_differ.py  test_extractor.py  test_planner.py  test_state.py
