[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apy-ops"
version = "0.1.0"
description = "Azure APIM deployment tool with Terraform-style plan & apply workflow"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.8",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
apy-ops = "apy_ops.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
